--- a/Lister/Info.plist
+++ b/Lister/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>Lister</string>
+	<string>JustList</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.your-company.Lister</string>
 	<key>CFBundleShortVersionString</key>
