--- a/Lister/Info.plist
+++ b/Lister/Info.plist
@@ -40,63 +40,9 @@
 	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main</string>
-	<key>CFBundleDocumentTypes</key>
-	<array>
-		<dict>
-			<key>LSHandlerRank</key>
-			<string>Owner</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleTypeIconFiles</key>
-			<array/>
-			<key>CFBundleTypeName</key>
-			<string>List Document</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>com.your-company.Lister</string>
-			</array>
-			<key>LSTypeIsPackage</key>
-			<false/>
-			<key>NSUbiquitousDocumentUserActivityType</key>
-			<string>com.your-company.Lister</string>
-		</dict>
-	</array>
-	<key>UTExportedTypeDeclarations</key>
-	<array>
-		<dict>
-			<key>UTTypeDescription</key>
-			<string>List Document</string>
-			<key>UTTypeIdentifier</key>
-			<string>com.your-company.Lister</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>list</string>
-				</array>
-			</dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>public.data</string>
-			</array>
-		</dict>
-	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.your-company.Lister.ListerURLScheme</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>lister</string>
-			</array>
-		</dict>
-	</array>
 	<key>XSAppIconAssets</key>
-	<string>Resources/Images.xcassets/AppIcon.appiconset</string>
+	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
 	<key>XSLaunchImageAssets</key>
-	<string>Resources/Images.xcassets/LaunchImage.launchimage</string>
-	<key>WidgetBundleIdentifier</key>
-	<string>com.your-company.Lister.ListerToday</string>
+	<string>Resources/Images.xcassets/LaunchImages.launchimage</string>
 </dict>
 </plist>
