--- a/Lister/Info.plist
+++ b/Lister/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>JustList</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.your-company.Lister</string>
+	<string>com.rzaitov.Lister</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
