--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Logic\IListService.cs" />
     <Compile Include="Logic\MockListService.cs" />
     <Compile Include="Logic\ListService.cs" />
+    <Compile Include="LocalizationKeys.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
