fixed localization for Russian and English

--- a/Lister/JustList.csproj
+++ b/Lister/JustList.csproj
@@ -176,5 +176,7 @@
     <BundleResource Include="Resources\ru.lproj\Main.strings" />
     <BundleResource Include="Resources\en.lproj\Localizable.strings" />
     <BundleResource Include="Resources\ru.lproj\Localizable.strings" />
+    <BundleResource Include="Resources\en.lproj\InfoPlist.strings" />
+    <BundleResource Include="Resources\ru.lproj\InfoPlist.strings" />
   </ItemGroup>
 </Project>
